--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
 <div class="page">
   <header class="header">
-    <div class="header__logo logo__links">
-      <a href="https://yandex.ru/" class="logo__link-yandex logo__link">Яндекс</a>
-      <a href="https://praktikum.yandex.ru/" class="logo__link-praktikum logo__link">Практикум</a>
+    <div class="logo_place_header logo__links">
+      <img src="./images/logo_place_header.svg" alt="Яндекс Практикум">
     </div>
     <div class="header__title">
       <h1 class="header__title-text">Научиться <br> учиться</h1>
@@ -173,16 +172,15 @@
       </div>
   </div>
   <div class="kaufman__triangle">
-    <img src="/images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle-anime">
+    <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle-anime">
   </div>
   </section>
 </main>
 <footer class="footer">
   <div class="footer__columns">
     <div class="column__content-copyright">
-      <div class="foter__logo logo__links">
-        <a href="https://yandex.ru/" class="logo__link-yandex logo__link logo__link-dark">Яндекс</a>
-        <a href="https://praktikum.yandex.ru/" class="logo__link-praktikum logo__link logo__link-dark">Практикум</a>
+      <div class="logo_place_footer logo__links">
+        <img src="./images/logo_place_footer.svg" alt="Яндекс Практикум">
       </div>
       <div class="footer__author">
         &copy;2020. Сергей Ивонтьев
@@ -208,9 +206,9 @@
     </div>
     <nav class="social__column-link ">
       <ul class="info__social-key">
-        <li><a href="#" class="column-link"><img src="/images/facebook_color_white.svg" alt="Фейсбук" class="column-social-icon">Facebook</a></li>
-        <li><a href="#" class="column-link"><img src="/images/vk_color_white.svg" alt="Вк" class="column-social-icon">Вконтакте</a></li>
-        <li><a href="#" class="column-link"><img src="/images/instagram_color_white.svg" alt="Инстаграм" class="column-social-icon">Instagram</a></li>
+        <li><a href="#" class="column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук" class="column-social-icon">Facebook</a></li>
+        <li><a href="#" class="column-link"><img src="./images/vk_color_white.svg" alt="Вк" class="column-social-icon">Вконтакте</a></li>
+        <li><a href="#" class="column-link"><img src="./images/instagram_color_white.svg" alt="Инстаграм" class="column-social-icon">Instagram</a></li>
       </ul>
     </nav>
     </div>
