--- a/index.html
+++ b/index.html
@@ -9,194 +9,177 @@
 </head>
 <body>
 <div class="page">
-  <header class="header">
-    <div class="logo_place_header logo__links">
-      <img src="./images/logo_place_header.svg" alt="Яндекс Практикум">
-    </div>
-    <!-- Тут специально вложенно h1 в div z-index без вложенности не работает  :(-->
-    <div class="header__title">
-      <h1 class="header__title-text">Научиться учиться</h1>
-    </div>
-    <div class="header__subtitle">
-      <p class="header__subtitle-text">Какие современные и эффективные подходы к обучению
-        вы можете использовать в своей жизни? <a href="#teach-kaufman" class="header__subtitle-text_link hover__link">Узнать &#8594; </a>
+  <header class="header"> 
+      <img src="./images/logo_place_header.svg" alt="Яндекс Практикум" class="logo logo_place_header">
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению
+        вы можете использовать в своей жизни? <a href="#teach-kaufman" class="header__link hover_link">Узнать &#8594; </a>
       </p>
-    </div>
-    
-    <div class="header__main-illustration"></div>
+      <img src="./images/header-image.png" alt="Учиться?" class="header__main-illustration">
     <div class="header__square-pic"></div>
   </header>
   
   <main class="content">
     <section class="description">
-      <div class="two-columns">
-        <article class="two-columns__brief">
+      <!-- Вроде тут правильно вложил, но валидатор ругается на этот элемент, хотя у него дочерний h2 -->
+      <article class="two-columns">
+        <h2 class="two-columns__brief">
           Главные проблемы в обучение
-        </article>
-        <article class="two-columns__main-text">
+        </h2>
+        <div class="two-columns__main_text">
           <p class="two-columns__paragraph">
             Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. 
             Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. 
             Зубрежка быстро выветривается и не приносит пользы. 
           </p>
-          <p class="two-columns__paragraph two-columns__paragraph-key">
+          <p class="two-columns__paragraph">
             <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
           </p>
           <p class="two-columns__paragraph">
             Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же 
             техники применяются на примере обучения в Практикуме.
           </p>
-        </article>
-      </div>
+        </div>
+      </article>
     </section>
 
     <section class="digits">
-      <h2 class="section__title title__style-key">
+      <h2 class="section-title">
           Цифры и факты
       </h2>
-      <h3 class="section__subtitle subtitle__style-key">
+      <h3 class="section-subtitle">
           Про учебу и мозг
       </h3>
-      <div class="table  table__style-key">
-        <div class="table__cell">
-          <h3 class="table__heading table_heading_style">86 миллиардов</h3>
-          <p class="table__text table_text_style">Число нейронов в мозге человека</p>
+      <div class="table">
+        <div class="table__cell table__cell_theme_white">
+          <h4 class="table__heading">86 миллиардов</h4>
+          <p class="table__text">Число нейронов в мозге человека</p>
         </div>
-        <div class="table__cell">
-          <h3 class="table__heading table_heading_style">2,1 миллиарда</h3>
-          <p class="table__text table_text_style">Число нуждающихся в повышении квалификации</p>
-          <p class="table__text table_text_style">Всемирный банк, 2017</p>
+        <div class="table__cell table__cell_theme_white">
+          <h4 class="table__heading">2,1 миллиарда</h4>
+          <p class="table__text">Число нуждающихся в повышении квалификации</p>
+          <p class="table__text">Всемирный банк, 2017</p>
         </div>
-        <div class="table__cell">
-          <h3 class="table__heading table_heading_style">1000 терабайт</h3>
-          <p class="table__text table_text_style">Объем памяти человека</p>
+        <div class="table__cell table__cell_theme_white">
+          <h4 class="table__heading">1000 терабайт</h4>
+          <p class="table__text">Объем памяти человека</p>
         </div>
-        <div class="table__cell">
-          <h3 class="table__heading table_heading_style">500 триллионов</h3>
-          <p class="table__text table_text_style">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+        <div class="table__cell table__cell_theme_white">
+          <h4 class="table__heading">500 триллионов</h4>
+          <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
         </div>
-        <div class="table__cell">
-          <h3 class="table__heading table_heading_style">420 миллионов</h3>
-          <p class="table__text table_text_style">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-          <p class="table__text table_text_style">Всемирный банк, 2017</p>
+        <div class="table__cell table__cell_theme_white">
+          <h4 class="table__heading">420 миллионов</h4>
+          <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+          <p class="table__text">Всемирный банк, 2017</p>
         </div>  
-        <div class="table__cell">
-          <h3 class="table__heading table_heading_style">17-20 лет</h3>
-          <p class="table__text table_text_style">Пик обучаемости</p>
+        <div class="table__cell table__cell_theme_white">
+          <h4 class="table__heading">17-20 лет</h4>
+          <p class="table__text">Пик обучаемости</p>
         </div>     
-        <div class="table__cell">
-          <h3 class="table__heading table_heading_style">1885 год</h3>
-          <p class="table__text table_text_style">Открытие кривой забывания</p>
+        <div class="table__cell table__cell_theme_white">
+          <h4 class="table__heading">1885 год</h4>
+          <p class="table__text">Открытие кривой забывания</p>
         </div>   
-        <div class="table__cell">
-          <h3 class="table__heading table_heading_style">1889 год</h3>
-          <p class="table__text table_text_style">Открытие условного рефлекса</p>
+        <div class="table__cell table__cell_theme_white">
+          <h4 class="table__heading">1889 год</h4>
+          <p class="table__text">Открытие условного рефлекса</p>
         </div>
     </div>
     </section>
 
     <section class="feynman">
-      <h2 class="feynman__title fyeman__key">
+      <h2 class="feynman__title">
         Метод  Фейнмана
       </h2>
-      <h3 class="feynman__subtitle fyeman__key">
+      <h3 class="feynman__subtitle">
         Выучить и не забыть.
       </h3>
-      <div class="feyman__link">
-        <a href="https://lifehacker.ru/metod-fejnmana/" class="feyman__link-text hover__link">Подробнее &#8594;</a>
-      </div>
-      <div class="feynman__background"></div>
+      <a href="https://lifehacker.ru/metod-fejnmana/" class="feyman__link hover_link">Подробнее &#8594;</a>
+      <!-- Так и не понял как ставить и на фон феймана и серый цвет :() -->
+      <img src="./images/feynman.png" alt="Фейман" class="feynman__background">
     </section>
 
     <section class="kaufman" id="teach-kaufman">
-        <h2 class="section__title_theme_dark title__style-key">
+        <h2 class="section-title section__title_theme_dark">
           Принципы обучения
         </h2>
-        <h3 class="section__subtitle_theme_dark subtitle__style-key">
+        <h3 class="section-subtitle section__subtitle_theme_dark">
           от Джоша Кауфмана
         </h3>
-      <div class="table__theme-dark table__style-key">
-        <div class="kaufman__cell">
-          <h3 class="kaufman__cell-heading table_heading_style">1</h3>
-          <p class="kaufman__cell-text table_text_style">Выберете привлекательный проект.</p>
+      <div class="table table_theme_dark">
+        <div class="tale__cell tale__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">1</h4>
+          <p class="table__text table__text_theme_dark">Выберете привлекательный проект.</p>
         </div>
-        <div class="kaufman__cell">
-          <h3 class="kaufman__cell-heading table_heading_style">2</h3>
-          <p class="kaufman__cell-text table_text_style">Сосредоточьтесь на каком-то одном навыке</p>
+        <div class="table__cell tale__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">2</h4>
+          <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке</p>
         </div>
-        <div class="kaufman__cell">
-          <h3 class="kaufman__cell-heading table_heading_style">3</h3>
-          <p class="kaufman__cell-text table_text_style">Определите целевой уровень мастерства.</p>
+        <div class="table__cell tale__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">3</h4>
+          <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
         </div>
-        <div class="kaufman__cell">
-          <h3 class="kaufman__cell-heading table_heading_style">4</h3>
-          <p class="kaufman__cell-text table_text_style">Разбейте навык на элементы.</p>
+        <div class="table__cell tale__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">4</h4>
+          <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
         </div>
-        <div class="kaufman__cell">
-          <h3 class="kaufman__cell-heading table_heading_style">5</h3>
-          <p class="kaufman__cell-text table_text_style">Приготовьте всё необходимое для занятий.</p>
+        <div class="table__cell tale__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">5</h4>
+          <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
         </div>  
-        <div class="kaufman__cell">
-          <h3 class="kaufman__cell-heading table_heading_style">6</h3>
-          <p class="kaufman__cell-text table_text_style">Устраните препятствия для занятий.</p>
+        <div class="table__cell tale__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">6</h4>
+          <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
         </div>     
-        <div class="kaufman__cell">
-          <h3 class="kaufman__cell-heading table_heading_style">7</h3>
-          <p class="kaufman__cell-text table_text_style">Выделите специальное время для занятий</p>
+        <div class="table__cell tale__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">7</h4>
+          <p class="table__text table__text_theme_dark">Выделите специальное время для занятий</p>
         </div>   
-        <div class="kaufman__cell">
-          <h3 class="kaufman__cell-heading table_heading_style">8</h3>
-          <p class="kaufman__cell-text table_text_style">Создайте быстрые петли для обратной связи</p>
+        <div class="table__cell tale__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">8</h4>
+          <p class="table__text table__text_theme_dark">Создайте быстрые петли для обратной связи</p>
         </div>
-        <div class="kaufman__cell">
-          <h3 class="kaufman__cell-heading table_heading_style">9</h3>
-          <p class="kaufman__cell-text table_text_style">Занимайтесь по расписанию, короткими интенстивными интервалами.</p>
+        <div class="table__cell tale__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">9</h4>
+          <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенстивными интервалами.</p>
         </div>
-        <div class="kaufman__cell">
-          <h3 class="kaufman__cell-heading table_heading_style">10</h3>
-          <p class="kaufman__cell-text table_text_style">Уделяйте внимание количеству и скорости.</p>
+        <div class="table__cell tale__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">10</h4>
+          <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </div>
     </div>
-    <div class="kaufman__triangle">
-      <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle-anime">
-    </div>
+    <div class="kaufman__triangle"></div>
     </section>
   </main>
+
   <footer class="footer">
     <div class="footer__columns">
-      <div class="footer__content-copyright">
-        <div class="logo_place_footer logo__links">
-          <img src="./images/logo_place_footer.svg" alt="Яндекс Практикум">
-        </div>
-        <div class="footer__author">
+      <div class="footer__column_content_copyright">
+        <img src="./images/logo_place_footer.svg" alt="Яндекс Практикум" class="logo logo_place_footer">
+        <p class="footer__author">
           &copy;2020. Сергей Ивонтьев
-        </div>
+        </p>
       </div>
-
-      <div class="footer__content-info">
-        <div class="footer__column-heading">
+      <div class="footer__column_content_info">
+        <h3 class="footer__column-heading">
           О практикуме
+        </h3>
+        <div class="info__column-links">
+            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Наставники</a>
         </div>
-        <nav class="info__column-links">
-          <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link">Главная</a></li>
-            <li><a href="#" class="footer__column-link">Концепция</a></li>
-            <li><a href="#" class="footer__column-link">Наставники</a></li>
-          </ul>
-        </nav>
       </div>
-
-      <div class="footer__content-social">
-        <div class="footer__column-heading">
+      <div class="footer__column_content_social">
+        <h3 class="footer__column-heading">
           Соцсети
+        </h3>
+        <div class="social__column-links">
+            <a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">Facebook</a>
+            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Вк" class="footer__social-icon">Вконтакте</a>
+            <a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram</a>
         </div>
-        <nav class="social__column-links">
-          <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">Facebook</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Вк" class="footer__social-icon">Вконтакте</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram</a></li>
-          </ul>
-        </nav>
       </div>
     </div>
   </footer>
