--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Научиться учиться</title>
 </head>
 <body>
+  <!-- Спасибо большое за код-ревью!) надеюсь что вы и дальше будете меня делать лучше -->
 <div class="page">
   <header class="header" id="header"> 
       <img src="./images/logo_place_header.svg" alt="Яндекс Практикум" class="logo logo_place_header">
@@ -101,10 +102,10 @@
     </section>
 
     <section class="kaufman" id="teach-kaufman">
-        <h2 class="section-title section__title_theme_dark">
+        <h2 class="section-title section-title_theme_dark">
           Принципы обучения
         </h2>
-        <h3 class="section-subtitle section__subtitle_theme_dark">
+        <h3 class="section-subtitle section-subtitle_theme_dark">
           от Джоша Кауфмана
         </h3>
       <div class="table table_theme_dark">
@@ -165,7 +166,7 @@
         <h3 class="footer__column-heading">
           О практикуме
         </h3>
-        <nav class="info__column-links">
+        <nav class="footer__column-links">
           <!-- Наставник разрещил добавить доп класс, что бы соотвествовать логике nav>ul>li -->
           <ul class="footer__list">
             <li><a href="#header" class="footer__column-link">Главная</a></li>
@@ -178,7 +179,7 @@
         <h3 class="footer__column-heading">
           Соцсети
         </h3>
-        <nav class="social__column-links">
+        <nav class="footer__column-links">
           <!-- Наставник разрещил добавить доп класс, что бы соотвествовать логике nav>ul>li -->
           <ul class="footer__list">
             <li><a href="https://www.facebook.com/yandex.praktikum/" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">Facebook</a></li>
