--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="./images/logo_place_header.svg" alt="Яндекс Практикум" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению
-        вы можете использовать в своей жизни? <a href="#teach-kaufman" class="header__link">Узнать &#8594; </a>
+        вы можете использовать в своей жизни? <a href="#teach-kaufman" class="header__link" target="_self">Узнать &#8594; </a>
       </p>
       <img src="./images/header-image.png" alt="Учиться?" class="header__main-illustration">
     <div class="header__square-pic"></div>
@@ -131,7 +131,7 @@
       <h3 class="feynman__subtitle">
         Выучить и не забыть.
       </h3>
-      <a href="https://lifehacker.ru/metod-fejnmana/" class="feyman__link">Подробнее &#8594;</a>
+      <a href="https://lifehacker.ru/metod-fejnmana/" class="feyman__link" target="_blank" rel=“noopener”>Подробнее &#8594;</a>
       <!-- Так и не понял как ставить и на фон феймана и серый цвет :() -->
       <img src="./images/feynman.png" alt="Фейман" class="feynman__background">
     </section>
@@ -192,7 +192,7 @@
         <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
         <div class="khan__book-container">
           <img src="./images/khan-book.jpg" alt="Книга Салмана Хана: Весь мир - школа" class="khan__book-pic">
-          <a href="https://www.ozon.ru/context/detail/id/31700837/" class="khan__buy-link">Купить книгу &#8594;</a>
+          <a href="https://www.ozon.ru/context/detail/id/31700837/" class="khan__buy-link" target="_blank" rel=“noopener”>Купить книгу &#8594;</a>
         </div>
       </article>
     </section>
@@ -254,10 +254,10 @@
       <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения
       </h3>
       <div class="resources__logo-zone">
-        <img src="./images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo">
-        <img src="./images/logo/resources-n1.svg" alt="Н+1" class="resources__logo">
-        <img src="./images/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo">
-        <img src="./images/logo/resources-polka.svg" alt="Полка" class="resources__logo">
+        <a href="https://arzamas.academy/" target="_blank" rel=“noopener”><img src="./images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo"></a>
+        <a href="https://1-academy.ru/" target="_blank" rel=“noopener”><img src="./images/logo/resources-n1.svg" alt="Н+1" class="resources__logo"></a>
+        <a href="https://strelka.com/ru" target="_blank" rel=“noopener”><img src="./images/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo"></a>
+        <a href="https://polka.academy/" target="_blank" rel=“noopener”><img src="./images/logo/resources-polka.svg" alt="Полка" class="resources__logo"></a>
       </div>
     </section>
 
@@ -277,9 +277,9 @@
         </h3>
         <nav class="footer__column-links">
           <ul class="footer__list">
-            <li><a href="#header" class="footer__column-link">Главная</a></li>
-            <li><a href="#description" class="footer__column-link">Концепция</a></li>
-            <li><a href="#" class="footer__column-link">Наставники</a></li>
+            <li><a href="#header" class="footer__column-link" target="_self">Главная</a></li>
+            <li><a href="#description" class="footer__column-link" target="_self">Концепция</a></li>
+            <li><a href="#" class="footer__column-link" target="_self">Наставники</a></li>
           </ul>
         </nav>
       </div>
@@ -290,9 +290,12 @@
         <nav class="footer__column-links">
           <!-- Наставник разрещил добавить доп класс, что бы соотвествовать логике nav>ul>li -->
           <ul class="footer__list">
-            <li><a href="https://www.facebook.com/yandex.praktikum/" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">Facebook</a></li>
-            <li><a href="https://vk.com/yandex.praktikum" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Вк" class="footer__social-icon">Вконтакте</a></li>
-            <li><a href="https://www.instagram.com/yndx.praktikum/" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram</a></li>
+            <li><a href="https://www.facebook.com/yandex.praktikum/" class="footer__column-link" target="_blank" rel=“noopener”>
+              <img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">Facebook</a></li>
+            <li><a href="https://vk.com/yandex.praktikum" class="footer__column-link" target="_blank" rel=“noopener”>
+              <img src="./images/vk_color_white.svg" alt="Вк" class="footer__social-icon">Вконтакте</a></li>
+            <li><a href="https://www.instagram.com/yndx.praktikum/" class="footer__column-link" target="_blank" rel=“noopener”>
+              <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram</a></li>
           </ul>
         </nav>
       </div>
