--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
           </p>
         </div>
-        <div class="cards__item card__item_indent">
+        <div class="cards__item">
           <img src="./images/cards-recall.png" alt="Отзык" class="cards__image ">
           <h4 class="cards__title">Recall</h4>
           <p class="cards__description">
@@ -80,7 +80,7 @@
             Слушая преподователя, придумывайте хороший вопрос, который вас действительно волнует.
           </p>
         </div>
-        <div class="cards__item card__item_indent">
+        <div class="cards__item">
           <img src="./images/cards-competence.png" alt="Компетентность" class="cards__image">
           <h4 class="cards__title">Иллюзия компетентности</h4>
           <p class="cards__description">
@@ -131,7 +131,7 @@
       <h3 class="feynman__subtitle">
         Выучить и не забыть.
       </h3>
-      <a href="https://lifehacker.ru/metod-fejnmana/" class="feyman__link" target="_blank" rel=“noopener”>Подробнее &#8594;</a>
+      <a href="https://lifehacker.ru/metod-fejnmana/" class="feynman__link" target="_blank" rel=“noopener”>Подробнее &#8594;</a>
       <!-- Так и не понял как ставить и на фон феймана и серый цвет :() -->
       <img src="./images/feynman.png" alt="Фейман" class="feynman__background">
     </section>
