--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2 class="two-columns__brief">
           Главные проблемы в обучение
         </h2>
-        <div class="two-columns__main_text">
+        <div class="two-columns__main-text">
           <p class="two-columns__paragraph">
             Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. 
             Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. 
@@ -112,7 +112,7 @@
         <h2 class="two-columns__brief">
           История Барбары Оакли.
         </h2>
-        <div class="two-columns__main_text">
+        <div class="two-columns__main-text">
           <p class="two-columns__paragraph">
             С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, 
             причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, 
